[gd_scene load_steps=9 format=3 uid="uid://de1mk8uif1kl4"]

[ext_resource type="Shader" path="res://util/blur_scene.gdshader" id="1_fu8ib"]
[ext_resource type="Script" path="res://assets/ui/victory_screen/victory_screen.gd" id="2_dlk0s"]
[ext_resource type="Theme" uid="uid://brcdq62xfx56e" path="res://assets/ui/menu_theme.tres" id="2_yr8yw"]
[ext_resource type="Texture2D" uid="uid://der57etnwt3p1" path="res://art/star-empty.png" id="3_4udq0"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xxm68"]
shader = ExtResource("1_fu8ib")
shader_parameter/lod = 2.0

[sub_resource type="Animation" id="Animation_5x43s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("victory_container/victory_title:theme_override_font_sizes/font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [20]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("victory_container/level_stats/level_label:theme_override_font_sizes/font_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [16]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("victory_container/level_stats/time_label:theme_override_font_sizes/font_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("victory_container/player_stats/coin_label:theme_override_font_sizes/font_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("victory_container/player_stats/death_label:theme_override_font_sizes/font_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("victory_container/victory_title:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("victory_container/level_stats/level_label:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("victory_container/player_stats/coin_label:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("victory_container/level_stats/time_label:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("victory_container/player_stats/death_label:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("victory_container/rating/star_container:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("victory_container/rating/star_container2:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("victory_container/rating/star_container3:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("victory_container/rating/star_container4:modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_721tq"]
resource_name = "display_victory_screen"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("victory_container/victory_title:theme_override_font_sizes/font_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1, 25, 20]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("victory_container/level_stats/level_label:theme_override_font_sizes/font_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1, 20, 16]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("victory_container/level_stats/time_label:theme_override_font_sizes/font_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1, 20, 16]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("victory_container/player_stats/coin_label:theme_override_font_sizes/font_size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1, 20, 16]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("victory_container/player_stats/death_label:theme_override_font_sizes/font_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1, 20, 16]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("victory_container/victory_title:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("victory_container/level_stats/level_label:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.2, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("victory_container/player_stats/coin_label:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.3, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("victory_container/level_stats/time_label:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.2, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("victory_container/player_stats/death_label:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.3, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("victory_container/rating/star_container:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0.9, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("victory_container/rating/star_container2:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(1.1, 1.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("victory_container/rating/star_container3:modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(1.3, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("victory_container/rating/star_container4:modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(1.5, 1.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ac4kd"]
_data = {
"RESET": SubResource("Animation_5x43s"),
"display_victory_screen": SubResource("Animation_721tq")
}

[node name="victory_screen" type="ColorRect"]
process_mode = 3
material = SubResource("ShaderMaterial_xxm68")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(176, 325)
size_flags_horizontal = 4
script = ExtResource("2_dlk0s")

[node name="victory_animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ac4kd")
}

[node name="victory_container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(82, 53)
alignment = 1

[node name="victory_title" type="Label" parent="victory_container"]
layout_mode = 2
theme = ExtResource("2_yr8yw")
theme_override_font_sizes/font_size = 20
text = "VICTORY!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="level_stats" type="HBoxContainer" parent="victory_container"]
layout_mode = 2
alignment = 1

[node name="level_label" type="Label" parent="victory_container/level_stats"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_yr8yw")
theme_override_font_sizes/font_size = 16
text = "Level 0"
horizontal_alignment = 1

[node name="HSplitContainer" type="HSplitContainer" parent="victory_container/level_stats"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="time_label" type="Label" parent="victory_container/level_stats"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_yr8yw")
theme_override_font_sizes/font_size = 1
text = "Time: 00:00.0"
horizontal_alignment = 1

[node name="player_stats" type="HBoxContainer" parent="victory_container"]
layout_mode = 2
alignment = 1

[node name="coin_label" type="Label" parent="victory_container/player_stats"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_yr8yw")
theme_override_font_sizes/font_size = 1
text = "Coins: 0"

[node name="HSplitContainer" type="HSplitContainer" parent="victory_container/player_stats"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="death_label" type="Label" parent="victory_container/player_stats"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_yr8yw")
theme_override_font_sizes/font_size = 1
text = "Death: 0"
horizontal_alignment = 1

[node name="VSplitContainer" type="VSplitContainer" parent="victory_container"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
theme = ExtResource("2_yr8yw")

[node name="rating" type="HBoxContainer" parent="victory_container"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="star_container" type="BoxContainer" parent="victory_container/rating"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
alignment = 1

[node name="star_image" type="TextureRect" parent="victory_container/rating/star_container"]
layout_mode = 2
texture = ExtResource("3_4udq0")
expand_mode = 2

[node name="star_container2" type="BoxContainer" parent="victory_container/rating"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
alignment = 1

[node name="star_image" type="TextureRect" parent="victory_container/rating/star_container2"]
layout_mode = 2
texture = ExtResource("3_4udq0")
expand_mode = 2

[node name="star_container3" type="BoxContainer" parent="victory_container/rating"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
alignment = 1

[node name="star_image" type="TextureRect" parent="victory_container/rating/star_container3"]
layout_mode = 2
texture = ExtResource("3_4udq0")
expand_mode = 2

[node name="star_container4" type="BoxContainer" parent="victory_container/rating"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
alignment = 1

[node name="star_image" type="TextureRect" parent="victory_container/rating/star_container4"]
layout_mode = 2
texture = ExtResource("3_4udq0")
expand_mode = 2

[node name="skip_content" type="Label" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -66.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(180, 32.8889)
size_flags_vertical = 8
theme = ExtResource("2_yr8yw")
theme_override_font_sizes/font_size = 16
text = "Tap the screen to skip..."
horizontal_alignment = 1
vertical_alignment = 1
